#4280: New OData 4 consumer connector
* Dependent on olingo4 camel component

* ODataComponent
 * To workaround a couple of bugs and ensure the olingo4 configuration is
   correctly populated.

* ODataStartCustomizer
 * Used to generate json of the OData result data;
 * Exploits serializer implementations to manage the data into appropriate
   form.

* ODataMetaData*
 * For extracting OData resources from the service to allow the user to
   choose which they want to interrogate.

* ODataVerifier*
 * Checks parameter values provided by the user in the application wizard.

* Provides unit tests complete with an implementation of an OData server
  for interrogation.
 * Adds server certificates for testing https and tests for basic
   authentication since both of these are used by teiid implementations;

--- a/app/connector/pom.xml
+++ b/app/connector/pom.xml
@@ -70,6 +70,7 @@
     <module>webhook</module>
     <module>concur</module>
     <module>kudu</module>
+    <module>odata</module>
   </modules>
 
   <dependencyManagement>
