--- a/app/connector/support/catalog/pom.xml
+++ b/app/connector/support/catalog/pom.xml
@@ -160,6 +160,11 @@
       <artifactId>connector-kudu</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>connector-odata</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
