--- a/app/pom.xml
+++ b/app/pom.xml
@@ -1385,6 +1385,13 @@
         <artifactId>connector-kudu</artifactId>
         <version>${project.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>io.syndesis.connector</groupId>
+        <artifactId>connector-odata</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
       <!-- ============================================== -->
 
       <dependency>
