--- a/app/meta/pom.xml
+++ b/app/meta/pom.xml
@@ -335,6 +335,12 @@
     </dependency>
 
     <dependency>
+      <groupId>io.syndesis.connector</groupId>
+      <artifactId>connector-odata</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
       <!-- Needed by Guava at compile time -->
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>jsr305</artifactId>
